# CrapsSim

./: CMakeLists.txt  Copyright.txt  Dice.cpp  Dice.h  Dice.ui  DiceRoller.cpp  DiceRoller.h  DiceRoller.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.txt  Table.cpp  Table.h  Table.ui  application.qrc  craps.rc  include.cmake  runCmd.cpp
Modules/: FindBPSQt55.cmake
